--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -4,11 +4,15 @@
   color: #FFF !important
 
 .color-naranja2
-  background-color: #fff0db
+  background-color: #fff1db
 .color-naranja3
   background-color: #FFD494  
 .color-naranja4
-  background-color: #FFE9CB  
+  background-color: #FFE9CB
+.color-naranja5
+  background-color: #FFB74D  
+.redondeado
+  border-radius: 15px
 .bloque-texto-b .comilla-inicial i
   color: $color-sistema-texto
   display: flex
@@ -90,11 +94,135 @@
     top: 0
     transform: translateX(-50%)
     display: block
-    width: 160px
+    width: 150px
     margin: 0 auto
   .tarjeta
     display: inline-block
-    padding-top: 40px !important
+    padding-top: 30px !important
     height: 100%
     width: 100%
 
+.tarjeta-avatar3
+  height: 100%
+  position: relative
+  padding-top: 48px
+  & > img
+    position: absolute
+    left: 50%
+    top: 0
+    transform: translateX(-50%)
+    display: block
+    width: 85px
+    height: 85px
+    margin: 0 auto
+  .tarjeta
+    display: inline-block
+    padding-top: 30px !important
+    height: 100%
+    width: 100%
+
+
+.cajon.color-naranjaa:before
+  background-color: #FFB74D
+.cajon.color-naranjaa
+  background-color: #FFF1DB
+
+.tabs-c__tab--active span
+  font-weight: bold
+
+
+.borde-contenedor
+  border: 2px solid #FF9800
+
+
+// IMG HOVER -----------------------------------
+
+.content
+  position: relative
+  margin: auto
+  height: 440px
+
+.content .content-overlay
+  border-radius: 10px
+  background: #ffb74dcf
+  position: absolute
+  left: 0
+  top: 0
+  bottom: 10%
+  right: 0
+  opacity: 0
+  -webkit-transition: all 0.4s ease-in-out 0s
+  -moz-transition: all 0.4s ease-in-out 0s
+  transition: all 0.4s ease-in-out 0s
+
+.content:hover .content-overlay
+  opacity: 1
+.content:hover .btn-numero h3
+  color: #00104E !important
+  background-color: #FF9800
+  border: 7px solid #111E61
+  -webkit-transition: all 0.3s ease-in-out 0s
+  -moz-transition: all 0.3s ease-in-out 0s
+  transition: all 0.3s ease-in-out 0s
+
+.content img
+  z-index: 0
+  object-fit: cover
+  object-position: center center
+  height: 90%
+  border-radius: 10px
+
+.tarjeta-details
+  position: absolute
+  text-align: center
+  padding-left: 1em
+  padding-right: 1em
+  width: 90%
+  top: 50%
+  left: 50%
+  opacity: 0
+  -webkit-transform: translate(-50%, -50%)
+  -moz-transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%)
+  -webkit-transition: all 0.3s ease-in-out 0s
+  -moz-transition: all 0.3s ease-in-out 0s
+  transition: all 0.3s ease-in-out 0s
+
+.tarjeta-details p
+  line-height: 1.3
+
+.content:hover .tarjeta-details
+  top: 49%
+  opacity: 1
+
+.fadeIn-top
+  top: 20%
+
+.btn-numero h3
+  font-size: 31px
+  left: 42%
+  top: 80%
+  position: absolute
+  background-color: #FFF1DB
+  border-radius: 50%
+  width: 90px
+  height: 90px
+  text-align: center
+  display: flex
+  flex-direction: column
+  justify-content: center
+  border: 7px solid #FFB74D
+  z-index: 9999
+  -webkit-transition: all 0.3s ease-in-out 0s
+  -moz-transition: all 0.3s ease-in-out 0s
+  transition: all 0.3s ease-in-out 0s
+
+@media screen and (max-width: 640px)
+  .content:hover .tarjeta-details
+    top: 40%;
+  .btn-numero h3
+    left: 41% !important
+  .tarjeta-details 
+    width: 95% !important 
+  .content:hover .tarjeta-details
+    top: 49%    
