--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,6 +2,9 @@
   color: $color-sistema-texto
 .barra-avance__boton--regresar:hover span, .barra-avance__boton--regresar:focus span
   color: #FFF !important
+.banner-interno__titulo__icono i
+  color: #ffb74d !important
+
 
 .color-naranja2
   background-color: #fff1db
